--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
+    "react-toastify": "^9.1.1",
     "react-use-localstorage": "^3.5.3",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
